<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="actions_container_family_header">Make it easy on yourself</string>
    <string name="actions_container_family_support">Find better ways to get things done</string>
    <string name="actions_container_setting_description">Control your phone with simple gestures</string>
    <string name="actions_dialog_ok">Ok</string>
    <string name="actions_tutorial_next">Next</string>
    <string name="ad_battery_saver_notification_content_text">Attentive Display doesn’t work in battery saving mode</string>
    <string name="ad_checkbox_summary">@string/ad_summary</string>
    <string name="ad_discovery_notification_text">Keep the screen on while you\'re looking at it</string>
    <string name="ad_discovery_notification_title">Enable Attentive Display</string>
    <string name="ad_enabled">Attentive Display</string>
    <string name="ad_mod_notification_content_text">Your Moto Mod doesn’t support Attentive Display</string>
    <string name="ad_mod_notification_content_title">Attentive Display disabled</string>
    <string name="ad_permission_microscreen_receiver_description">Allows application communicate with Micro Screen Receiver.</string>
    <string name="ad_permission_microscreen_receiver_label">send broadcast to Micro Screen Receiver</string>
    <string name="ad_permission_read_camera_state_description">Allows the application to determine when Attentive Display is using the camera.</string>
    <string name="ad_permission_read_camera_state_label">Read Attentive Display camera state</string>
    <string name="ad_permission_start_microscreen_description">Allows the application to turn the Micro Screen feature on.</string>
    <string name="ad_permission_start_microscreen_label">start Micro Screen feature</string>
    <string name="ad_summary">The screen won\'t dim or sleep while you\'re looking at it</string>
    <string name="ad_summary_listview">Keep the screen on while you\'re looking at it</string>
    <string name="ad_tour_demo_help">Note: It may be hard to see you in certain lighting conditions</string>
    <string name="ad_tour_demo_instructions">An image will appear in the circle below when Attentive Display sees you. The image will disappear when you look away from screen.</string>
    <string name="ad_tour_demo_title">How it works</string>
    <string name="ad_tour_demo_title_success">Great!</string>
    <string name="ad_tour_error_camera">Can\'t demo Attentive Display as the camera is not available.</string>
    <string name="ad_tour_error_description_distance">Your face is too far from the screen</string>
    <string name="ad_tour_error_description_lux">There\'s not enough light to see your face. Please move to a lighter environment.</string>
    <string name="ad_tour_error_description_position">You need to hold your phone and look directly at the screen</string>
    <string name="ad_tour_error_title">Oops!</string>
    <string name="ad_tour_no_face_overlay">Look at the screen</string>
    <string name="ad_tour_no_face_overlay_light_error">Not enough light</string>
    <string name="ad_tour_no_face_overlay_object_error">Come closer</string>
    <string name="ad_tour_success_description">Now the screen won\'t dim or sleep as long as you\'re looking at it</string>
    <string name="app_name">Moto Actions</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="background_service_text">Moto Actions is active</string>
    <string name="background_service_title">Moto Actions</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bullet">•</string>
    <string name="bullet_tutorial_tip">•  %s</string>
    <string name="camera_qd_enabled">Quick capture</string>
    <string name="camera_qd_enabled_checkbox_summary">Twist your wrist twice quickly to open the camera anytime</string>
    <string name="camera_qd_enabled_summary">Twist your wrist twice quickly to open the camera anytime</string>
    <string name="camera_qd_info">While holding your phone, just twist your wrist two times—like you\'re turning a door knob.\10\10Try it now.</string>
    <string name="camera_qd_timeout_info">People also say it\'s like:</string>
    <string name="camera_qd_timeout_info1">Revving a motorcycle</string>
    <string name="camera_qd_timeout_info2">Turning a screwdriver</string>
    <string name="camera_qd_timeout_title">Try this.</string>
    <string name="camera_qd_title">Twist two times</string>
    <string name="channel_fdn_description">Notifications to discover new features.</string>
    <string name="channel_fdn_title">Feature discovery</string>
    <string name="channel_general_description">Notifications outside of categories.</string>
    <string name="channel_general_title">General</string>
    <string name="channel_nd_description">Notification of Night Display activation.</string>
    <string name="channel_nd_title">Night Display</string>
    <string name="channel_running_service_description">Notifications to grant access to sensors and camera</string>
    <string name="channel_running_service_title">Running application</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choptwice_discovery_notification_text">Turn on your flashlight instantly</string>
    <string name="choptwice_discovery_notification_title">Fast flashlight</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="debug_clear_ad_notification_description">Clear the shared preference of showing the notification for AD incompatibility with Camera Mod and Battery Saver.</string>
    <string name="debug_clear_ad_notification_title">Clear AD notification data</string>
    <string name="debug_clear_ad_notification_toast">Cleared the AD incompatibility notifications shared preferences.</string>
    <string name="debug_clear_all_data_description">Clear all application shared preferences.</string>
    <string name="debug_clear_all_data_title">Clear all app data</string>
    <string name="debug_clear_all_data_toast">Cleared all application shared preferences.</string>
    <string name="debug_delete_ad_photo_description">Use this option to delete all photos saved from attentive display.</string>
    <string name="debug_delete_ad_photo_message">Photos deleted with success.</string>
    <string name="debug_delete_ad_photo_title">Delete attentive display photos</string>
    <string name="debug_fdn_change_description">Change the FDN delay to DEBUG mode to count 4 days each 1 hour or rollback to NORMAL mode.</string>
    <string name="debug_fdn_change_title">Change FDN Delay.</string>
    <string name="debug_fdn_reset_description">Reset Feature Discovery Notifications (FDN) thereby they appear again after respective trigger.</string>
    <string name="debug_fdn_reset_finished">FDN notification reset.</string>
    <string name="debug_fdn_reset_title">Reset all FDN Notifications.</string>
    <string name="debug_force_accel_description">Force AD to use Accelerometer sensor</string>
    <string name="debug_force_accel_title">Attentive Display Accelerometer</string>
    <string name="debug_force_accel_toast">Accelerometer sensor forced</string>
    <string name="debug_force_camera_manager_description">Force Chop Chop to use Camera Manager</string>
    <string name="onenav_tutorial_optin_description">Now, turn it on and give one button navigation a try</string>
    <string name="onenav_tutorial_optin_info">One button navigation works with most apps.\10You can manage this feature in the Moto app.</string>
    <string name="onenav_tutorial_optin_title">You\'re finished!</string>
    <string name="wave_to_silence_phone_demo_info">Practice call</string>
    <string name="wave_to_silence_phone_demo_title">Wave now</string>
</resources>