<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/parasailing_500" android:layout_width="match_parent" android:layout_height="match_parent">
    <View android:id="@+id/center_pivot" android:layout_width="1px" android:layout_height="1px" android:layout_centerInParent="true"/>
    <TextView android:textSize="34sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/onenav_optin_margin_title" android:text="@string/onenav_tutorial_optin_title" android:layout_above="@+id/center_pivot" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="16sp" android:textColor="@android:color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/onenav_tutorial_optin_description" android:layout_below="@+id/center_pivot" android:layout_centerHorizontal="true" android:layout_marginStart="@dimen/onenav_optin_margin_side" android:layout_marginEnd="@dimen/onenav_optin_margin_side"/>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/onenav_optin_margin_bottom_bar" android:layout_above="@+id/bottom_bar" android:layout_centerInParent="true" android:layout_marginStart="@dimen/onenav_optin_margin_info_bar" android:layout_marginEnd="@dimen/onenav_optin_margin_info_bar">
        <ImageView android:id="@+id/image_optin_info" android:layout_width="@dimen/onenav_optin_image_size" android:layout_height="@dimen/onenav_optin_image_size" android:src="@android:drawable/ic_dialog_info" android:layout_alignTop="@+id/text_optin_info" android:layout_alignBottom="@+id/text_optin_info" android:layout_marginEnd="@dimen/onenav_optin_margin_image"/>
        <TextView android:textSize="14sp" android:textColor="@android:color/white" android:gravity="start" android:id="@+id/text_optin_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/onenav_tutorial_optin_info" android:layout_toEndOf="@+id/image_optin_info"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/bottom_bar" android:layout_width="match_parent" android:layout_height="@dimen/settings_tutorial_button_layout_height" android:layout_alignParentBottom="true">
        <include android:id="@+id/layout_cmd_two_buttons" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" layout="@layout/component_bottom_bar_border_aligned_two_buttons"/>
        <include android:id="@+id/layout_cmd_single_button" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" layout="@layout/component_bottom_bar_border_aligned_single_button"/>
    </RelativeLayout>
</RelativeLayout>
